--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "compression": "^1.7.4",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.6.0",
+    "now": "^15.5.0"
   }
 }
