--- a/package.json
+++ b/package.json
@@ -22,11 +22,20 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "composable-middleware": "^0.3.0",
     "compression": "^1.7.4",
+    "connect-mongo": "^3.0.0",
+    "crypto": "^1.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.0",
-    "now": "^15.5.0"
+    "morgan": "^1.9.1",
+    "now": "^15.5.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
